# SpaceshipBattles

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Common/: CMakeLists.txt
Common/include/: GameObject.h  GameObjectBase.h  ICommand.h  IGameObject.h  IMovable.h  IRotatable.h  MoveObj.h  RotateObjXY.h  SpaceSheep.h  Teleportation.h  quaternion.h
Common/src/: GameObject.cpp  GameObjectBase.cpp  MoveObj.cpp  MoveSpaseSheepXY.cpp  RotateObjXY.cpp  SpaceSheep.cpp  Teleportation.cpp
Main/: CMakeLists.txt
Main/src/: main.cpp
Server/: CMakeLists.txt
Test/: CMakeLists.txt
Test/src/: test.cpp
